# rustframework

./: .env  Cargo.toml
src/: lib.rs  main.rs
src/db_serviciotec/: clientes.rs  diagnosticos.rs  equipos.rs  fichasentrega.rs  mod.rs  prelude.rs  tecnicos.rs
src/rutas/: mod.rs
src/rutas/clientes/: clientes_atomic_update.rs  clientes_create.rs  clientes_delete.rs  clientes_list.rs  clientes_partial_update.rs
src/rutas/tecnicos/: tecnicos_create.rs
