[package]
name = "tec_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_with = "3.2.0"
tokio = { version = "1.31.0", features = ["full"] }
